<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name" translatable="no">IPCC</string>
  <string name="settings_name" translatable="no">AppRTC Settings</string>
  <string name="disconnect_call">Disconnect Call</string>
  <string name="room_names">Online Users:</string>
  <string name="room_description">
    Please enter a user name to call.
  </string>
  <string name="connect_text">Connect</string>
  <string name="invalid_url_title">Invalid URL</string>
  <string name="invalid_url_text">The URL you entered resulted in an invalid URL: %1$s
  </string>
  <string name="calldialog_title">Incoming call</string>
  <string name="calldialog_question">Answer call?</string>
  <string name="calldialog_answer">Answer</string>
  <string name="calldialog_hangung">Hangup</string>
  <string name="channel_error_title">Lỗi kết nối</string>
  <string name="connecting_to">Connecting to: %1$s</string>
  <string name="missing_wsurl">FATAL ERROR: Missing ws url to connect to</string>
  <string name="missing_from">FATAL ERROR: Missing username to connect from</string>
  <string name="missing_to">FATAL ERROR: Missing username to.</string>
  <string name="ok">OK</string>
  <string name="switch_camera">Switch front/back camera</string>
  <string name="toggle_debug">Toggle debug view</string>
  <string name="action_settings">Settings</string>
  <string name="add_room_description">Add new room to the list</string>
  <string name="remove_room_description">Remove room from the list</string>
  <string name="connect_description">Connect to the room</string>
  <string name="connect_loopback_description">Loopback connection</string>

  <!-- Settings strings. -->
  <string name="pref_basicsettings_key">basic_settings_key</string>
  <string name="pref_basicsettings_title">Basic Settings.</string>

  <string name="pref_room_server_url_key">room_server_url_preference</string>
  <string name="pref_room_server_url_title">Websocket server URL.</string>
  <string name="pref_room_server_url_dlg">Enter the websocket server URL.</string>
  <string name="pref_room_server_url_default" translatable="false">wss://nicokrause.com/jWebrtc</string>

  <string name="pref_from_key">from_settings_key</string>
  <string name="pref_from_title">Username</string>
  <string name="pref_from_dlg">Set your username which is calling other users</string>
  <string name="pref_from_default">nandi</string>

  <string name="pref_room_key">room_preference</string>
  <string name="pref_room_list_key">room_list_preference</string>

  <string name="pref_videosettings_key">video_settings_key</string>
  <string name="pref_videosettings_title">WebRTC video settings.</string>

  <string name="pref_videocall_key">videocall_preference</string>
  <string name="pref_videocall_title">Video call.</string>
  <string name="pref_videocall_dlg">Enable video in a call.</string>
  <string name="pref_videocall_default">true</string>

  <string name="pref_resolution_key">resolution_preference</string>
  <string name="pref_resolution_title">Video resolution.</string>
  <string name="pref_resolution_dlg">Enter AppRTC local video resolution.</string>
  <string name="pref_resolution_default">Default</string>

  <string name="pref_fps_key">fps_preference</string>
  <string name="pref_fps_title">Camera fps.</string>
  <string name="pref_fps_dlg">Enter local camera fps.</string>
  <string name="pref_fps_default">Default</string>

  <string name="pref_capturequalityslider_key">capturequalityslider_preference</string>
  <string name="pref_capturequalityslider_title">Capture quality slider.</string>
  <string name="pref_capturequalityslider_dlg">Enable slider for changing capture quality.</string>
  <string name="pref_capturequalityslider_default">false</string>

  <string name="pref_startvideobitrate_key">startvideobitrate_preference</string>
  <string name="pref_startvideobitrate_title">Start video bitrate setting.</string>
  <string name="pref_startvideobitrate_dlg">Start video bitrate setting.</string>
  <string name="pref_startvideobitrate_default">Default</string>

  <string name="pref_startvideobitratevalue_key">startvideobitratevalue_preference</string>
  <string name="pref_startvideobitratevalue_title">Video encoder start bitrate.</string>
  <string name="pref_startvideobitratevalue_dlg">Enter video encoder start bitrate in kbps.</string>
  <string name="pref_startvideobitratevalue_default">1000</string>

  <string name="pref_videocodec_key">videocodec_preference</string>
  <string name="pref_videocodec_title">Default video codec.</string>
  <string name="pref_videocodec_dlg">Select default video codec.</string>
  <string name="pref_videocodec_default">VP8</string>

  <string name="pref_hwcodec_key">hwcodec_preference</string>
  <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
  <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
  <string name="pref_hwcodec_default">true</string>

  <string name="pref_capturetotexture_key">capturetotexture_preference</string>
  <string name="pref_capturetotexture_title">Video capture to surface texture.</string>
  <string name="pref_capturetotexture_dlg">Capture video to textures (if available).</string>
  <string name="pref_capturetotexture_default">false</string>

  <string name="pref_value_enabled">Enabled</string>
  <string name="pref_value_disabled">Disabled</string>

  <string name="pref_audiosettings_key">audio_settings_key</string>
  <string name="pref_audiosettings_title">WebRTC audio settings.</string>

  <string name="pref_startaudiobitrate_key">startaudiobitrate_preference</string>
  <string name="pref_startaudiobitrate_title">Audio bitrate setting.</string>
  <string name="pref_startaudiobitrate_dlg">Audio bitrate setting.</string>
  <string name="pref_startaudiobitrate_default">Default</string>

  <string name="pref_startaudiobitratevalue_key">startaudiobitratevalue_preference</string>
  <string name="pref_startaudiobitratevalue_title">Audio codec bitrate.</string>
  <string name="pref_startaudiobitratevalue_dlg">Enter audio codec bitrate in kbps.</string>
  <string name="pref_startaudiobitratevalue_default">32</string>

  <string name="pref_audiocodec_key">audiocodec_preference</string>
  <string name="pref_audiocodec_title">Default audio codec.</string>
  <string name="pref_audiocodec_dlg">Select default audio codec.</string>
  <string name="pref_audiocodec_default">OPUS</string>

  <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
  <string name="pref_noaudioprocessing_title">Disable audio processing.</string>
  <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline.</string>
  <string name="pref_noaudioprocessing_default">false</string>

  <string name="pref_aecdump_key">aecdump_preference</string>
  <string name="pref_aecdump_title">Create aecdump.</string>
  <string name="pref_aecdump_dlg">Enable diagnostic audio recordings.</string>
  <string name="pref_aecdump_default">false</string>

  <string name="pref_opensles_key">opensles_preference</string>
  <string name="pref_opensles_title">Use OpenSL ES for audio playback.</string>
  <string name="pref_opensles_dlg">Use OpenSL ES for audio playback.</string>
  <string name="pref_opensles_default">false</string>

  <string name="pref_miscsettings_key">misc_settings_key</string>
  <string name="pref_miscsettings_title">Miscellaneous settings.</string>

  <string name="pref_displayhud_key">displayhud_preference</string>
  <string name="pref_displayhud_title">Display call statistics.</string>
  <string name="pref_displayhud_dlg">Display call statistics.</string>
  <string name="pref_displayhud_default" translatable="false">false</string>

  <string name="pref_tracing_key">tracing_preference</string>
  <string name="pref_tracing_title">Debug performance tracing.</string>
  <string name="pref_tracing_dlg">Debug performance tracing.</string>
  <string name="pref_tracing_default" translatable="false">false</string>

  <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
    send downstream messages to this app.</string>
  <string name="registering_message">Generating InstanceID token...</string>
  <string name="token_error_message">An error occurred while either fetching the InstanceID token,
    sending the fetched token to the server or subscribing to the PubSub topic. Please try
    running the sample again.</string>
  <string name="no_audio" translatable="false">Switch off Audio</string>

  <string name="chat_hint">Soạn tin nhắn...</string>
  <string name="someone_typing">%s đang nhập nội dung ...</string>
  <string name="lost_connection">Mất kết nối...</string>
  <string name="title_example"></string>
  <string name="request_permission">Yêu cầu cho phép quyền truy cập camera để gửi hình ảnh</string>
  <string name="camera_error">This device doesn\\\'t support Camera2 API.</string>
  <string name="chat_send_tv">Gửi</string>
  <string name="chat_text_title">Chat với Viettel</string>
  <string name="connecting">Đang kết nối...</string>
  <string name="drag_video_show_full">Phóng to</string>
  <string name="end_video">CSKH Viettel đã tắt video</string>
</resources>
